--- a/languages/ada/README.dox
+++ b/languages/ada/README.dox
@@ -13,18 +13,12 @@ They only depend on the ANTLR C++ runtime support and on the C++ STL.
 They should be kept free of all other dependencies.
 In particular, they do not depend on Kdevelop, KDE, or Qt.
 
-Consult \ref LangSupportStatus for an up to date status of this programming language support part.
-
 \unmaintained This part is currently un-maintained.
 
 \authors <a href="mailto:okellogg AT users.sourceforge.net">Oliver Kellogg</a>
 \authors <a href="mailto:roberto AT kdevelop.org">Roberto Raggi</a>
 
-\feature Feature 1
-\feature Feature 2
-
-\bug Bug1
-\bug Bug2
+\feature Consult \ref LangSupportStatus for a up to date features/status of this programming language support part.
 
 \requirement Ada compiler
 
