--- a/languages/cpp/README.dox
+++ b/languages/cpp/README.dox
@@ -8,8 +8,6 @@ then you can play with KDevPCSImporter the code of the dialog is in languages/cp
 and of course lib/interfaces/kdevpcsimporter.*
 and if you want play with the c++ parser go to lib/cppparser/, the best is to start to read driver.*
 
-Consult \ref LangSupportStatus for an up to date status of this programming language support part.
-
 \authors <a href="mailto:roberto AT kdevelop.org">Roberto Raggi</a>
 
 \maintainer <a href="mailto:roberto AT kdevelop.org">Roberto Raggi</a>
@@ -17,17 +15,10 @@ Consult \ref LangSupportStatus for an up to date status of this programming lang
 \feature supports C/C++ language
 \feature can do code completion
 \feature has presistent class store
-\feature code highligth
-
+\feature code highlight
+\feature Consult \ref LangSupportStatus for a up to date features/status of this programming language support part.
 
 \bug bugs in <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&component=cppsupport&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=Bug+Number">cppsupport component at Bugzilla database</a>
-\bug Bug number 2
-
-\note
-Add notes here
-\verbatim
-Put verbatin code here if you need
-\endverbatim
 
 \faq <b>How can I have documentation on functions when using codecompletion ?</b>
   -# Create the xml-output with <a href="http://www.doxygen.org">Doxygen</a> of the files you want to add to the classstore
