--- a/doc/api/Mainpage.dox
+++ b/doc/api/Mainpage.dox
@@ -16,6 +16,8 @@ development version of KDevelop.  Additionally, you
 can subscribe or read the <a href="http://www.kdevelop.org/index.html?filename=mailinglist.html">mailing list</a> for any additions and/or
 modifications to the %API.
 
+An on-line, updated every 24H, html version of this documentation can be found at: http://developer.kde.org/documentation/library/cvs-api/kdevelop/html/index.html
+
 More information about the KDevelop architecture in form of tutorials, HOWTOs,
 and FAQs can be found at
 the <a href="http://www.kdevelop.org">KDevelop website</a>.
