--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-29 Alexander Dymo <cloudtemple@mksat.net>
+    * Imported updated pascal parser, it isn't restricted now to pascal-78.
+      Most object pascal/delphi extensions are supported.
+
 2003-10-17 Dominik Haumann <dhdev@gmx.de>
     * new Application templates in cpp: kateplugin2, noatunvisual,
     noatunui, kbearimportfilter, kbearplugin, kfileplugin
