made the background parser parse compilationUnit, not program (thus allowing to parse pascal units and libraries) improved array type declaration recognition fixed parsing of blocks and compound statements (do not complain of superfluous semicolons)

--- a/languages/pascal/PascalStoreWalkerTokenTypes.txt
+++ b/languages/pascal/PascalStoreWalkerTokenTypes.txt
@@ -21,13 +21,13 @@ FIELD=21
 DOT=22
 LIBRARY="library"=23
 SEMI=24
-EXPORTS="exports"=25
-COMMA=26
-LITERAL_index="index"=27
-LITERAL_name="name"=28
-USES="uses"=29
-UNIT="unit"=30
-END="end"=31
+END="end"=25
+EXPORTS="exports"=26
+COMMA=27
+LITERAL_index="index"=28
+LITERAL_name="name"=29
+USES="uses"=30
+UNIT="unit"=31
 INTERFACE="interface"=32
 IMPLEMENTATION="implementation"=33
 BEGIN="begin"=34
@@ -52,125 +52,125 @@ EXTERNAL="external"=52
 PUBLIC="public"=53
 ALIAS="alias"=54
 INTERRUPT=55
-REGISTER="register"=56
-PASCAL="pascal"=57
-CDECL="cdecl"=58
-STDCALL="stdcall"=59
-POPSTACK="popstack"=60
-SAVEREGISTERS="saveregisters"=61
-INLINE="inline"=62
-SAFECALL="safecall"=63
-NEAR="near"=64
-FAR="far"=65
-NUM_INT=66
-INTEGER="integer"=67
-SHORTINT="shortint"=68
-SMALLINT="smallint"=69
-LONGINT="longint"=70
-INT64="int64"=71
-BYTE="byte"=72
-WORD="word"=73
-CARDINAL="cardinal"=74
-QWORD="qword"=75
-BOOLEAN="boolean"=76
-BYTEBOOL=77
-LONGBOOL=78
-CHAR="char"=79
-DOTDOT=80
-ASSIGN=81
-REAL="real"=82
-SINGLE="single"=83
-DOUBLE="double"=84
-EXTENDED="extended"=85
-COMP="comp"=86
-STRING="string"=87
-LBRACK=88
-RBRACK=89
-PACKED="packed"=90
-RECORD="record"=91
-CASE="case"=92
-SET="set"=93
-FILE="file"=94
-POINTER=95
-OBJECT="object"=96
-VIRTUAL="virtual"=97
-ABSTRACT="abstract"=98
-PRIVATE="private"=99
-PROTECTED="protected"=100
-CONSTRUCTOR="constructor"=101
-DESTRUCTOR="destructor"=102
-CLASS="class"=103
-OVERRIDE="override"=104
-MESSAGE=105
-PUBLISHED="published"=106
-PROPERTY="property"=107
-LITERAL_read="read"=108
-LITERAL_write="write"=109
-DEFAULT="default"=110
-LITERAL_nodefault="nodefault"=111
-LE=112
-GE=113
-LTH=114
-GT=115
-NOT_EQUAL=116
-IN="in"=117
-IS="is"=118
-PLUS=119
-MINUS=120
-OR="or"=121
-XOR="xor"=122
-STAR=123
-SLASH=124
-DIV="div"=125
-MOD="mod"=126
-AND="and"=127
-SHL="shl"=128
-SHR="shr"=129
-NOT="not"=130
-AT=131
-PLUSEQ=132
-MINUSEQ=133
-STAREQ=134
-SLASHQE=135
-GOTO="goto"=136
-IF="if"=137
-THEN="then"=138
-ELSE="else"=139
-WHILE="while"=140
-DO="do"=141
-REPEAT="repeat"=142
-UNTIL="until"=143
-FOR="for"=144
-TO="to"=145
-DOWNTO="downto"=146
-WITH="with"=147
-LBRACK2=148
-RBRACK2=149
-OPERATOR="operator"=150
-RAISE="raise"=151
-TRY="try"=152
-EXCEPT="except"=153
-FINALLY="finally"=154
-ON="on"=155
-STRING_LITERAL=156
-CHR="chr"=157
-NIL="nil"=158
-NUM_REAL=159
-IDENT=160
-ABSOLUTE="absolute"=161
-AS="as"=162
-ASM="asm"=163
-ASSEMBLER="assembler"=164
-BREAK="break"=165
-CONTINUE="continue"=166
-DISPOSE="dispose"=167
-EXPORT="export"=168
-EXIT="exit"=169
-FALSE="false"=170
-INHERITED="inherited"=171
-NEW="new"=172
-SELF="self"=173
-TRUE="true"=174
+EXPORT="export"=56
+REGISTER="register"=57
+PASCAL="pascal"=58
+CDECL="cdecl"=59
+STDCALL="stdcall"=60
+POPSTACK="popstack"=61
+SAVEREGISTERS="saveregisters"=62
+INLINE="inline"=63
+SAFECALL="safecall"=64
+NEAR="near"=65
+FAR="far"=66
+NUM_INT=67
+INTEGER="integer"=68
+SHORTINT="shortint"=69
+SMALLINT="smallint"=70
+LONGINT="longint"=71
+INT64="int64"=72
+BYTE="byte"=73
+WORD="word"=74
+CARDINAL="cardinal"=75
+QWORD="qword"=76
+BOOLEAN="boolean"=77
+BYTEBOOL=78
+LONGBOOL=79
+CHAR="char"=80
+DOTDOT=81
+ASSIGN=82
+REAL="real"=83
+SINGLE="single"=84
+DOUBLE="double"=85
+EXTENDED="extended"=86
+COMP="comp"=87
+STRING="string"=88
+LBRACK=89
+RBRACK=90
+PACKED="packed"=91
+RECORD="record"=92
+CASE="case"=93
+SET="set"=94
+FILE="file"=95
+POINTER=96
+OBJECT="object"=97
+VIRTUAL="virtual"=98
+ABSTRACT="abstract"=99
+PRIVATE="private"=100
+PROTECTED="protected"=101
+CONSTRUCTOR="constructor"=102
+DESTRUCTOR="destructor"=103
+CLASS="class"=104
+OVERRIDE="override"=105
+MESSAGE=106
+PUBLISHED="published"=107
+PROPERTY="property"=108
+LITERAL_read="read"=109
+LITERAL_write="write"=110
+DEFAULT="default"=111
+LITERAL_nodefault="nodefault"=112
+LE=113
+GE=114
+LTH=115
+GT=116
+NOT_EQUAL=117
+IN="in"=118
+IS="is"=119
+PLUS=120
+MINUS=121
+OR="or"=122
+XOR="xor"=123
+STAR=124
+SLASH=125
+DIV="div"=126
+MOD="mod"=127
+AND="and"=128
+SHL="shl"=129
+SHR="shr"=130
+NOT="not"=131
+TRUE="true"=132
+FALSE="false"=133
+AT=134
+PLUSEQ=135
+MINUSEQ=136
+STAREQ=137
+SLASHQE=138
+GOTO="goto"=139
+IF="if"=140
+THEN="then"=141
+ELSE="else"=142
+WHILE="while"=143
+DO="do"=144
+REPEAT="repeat"=145
+UNTIL="until"=146
+FOR="for"=147
+TO="to"=148
+DOWNTO="downto"=149
+WITH="with"=150
+LBRACK2=151
+RBRACK2=152
+OPERATOR="operator"=153
+RAISE="raise"=154
+TRY="try"=155
+EXCEPT="except"=156
+FINALLY="finally"=157
+ON="on"=158
+STRING_LITERAL=159
+CHR="chr"=160
+NIL="nil"=161
+NUM_REAL=162
+IDENT=163
+ABSOLUTE="absolute"=164
+AS="as"=165
+ASM="asm"=166
+ASSEMBLER="assembler"=167
+BREAK="break"=168
+CONTINUE="continue"=169
+DISPOSE="dispose"=170
+EXIT="exit"=171
+INHERITED="inherited"=172
+NEW="new"=173
+SELF="self"=174
 METHOD=175
 ADDSUBOR=176
 ASSIGNEQUAL=177
@@ -184,4 +184,5 @@ RCURLY=184
 WS=185
 COMMENT_1=186
 COMMENT_2=187
-EXPONENT=188
+COMMENT_3=188
+EXPONENT=189
