--- a/languages/ada/README.dox
+++ b/languages/ada/README.dox
@@ -13,10 +13,16 @@ They only depend on the ANTLR C++ runtime support and on the C++ STL.
 They should be kept free of all other dependencies.
 In particular, they do not depend on Kdevelop, KDE, or Qt.
 
+In order to generate the parser by hand, antlr v2.7.2 is required.
+There are parser compilation errors with some gcc versions. To avoid
+them, replace file antlr/CppCodeGenerator.java in the antlr source code tree
+with the one from <a href="ftp://fara.cs.uni-potsdam.de/incoming/CppCodeGenerator.java.gz">ftp://fara.cs.uni-potsdam.de/incoming/CppCodeGenerator.java.gz</a>.
+
 \unmaintained This part is currently un-maintained.
 
 \authors <a href="mailto:okellogg AT users.sourceforge.net">Oliver Kellogg</a>
 \authors <a href="mailto:roberto AT kdevelop.org">Roberto Raggi</a>
+\authors <a href="mailto:cloudtemple AT mksat.net">Alexander Dymo</a>
 
 \feature Consult \ref LangSupportStatus for a up to date features/status of this programming language support part.
 
