--- a/languages/pascal/README.dox
+++ b/languages/pascal/README.dox
@@ -1,48 +1,26 @@
 /** \class PascalSupportPart
 This is Pascal language support plugin.
 
-Put a more detailed description of your part in these lines. It can span
-over several lines. You can even use some html commands in these lines like:
-<code>This is code</code>, html links <a href="http://somelocation">link text</a>,
-and images.
+Pascal support provides good fpc and dcc compiler support by compiler plugins.
+Nearly all command line switches for those compilers can be configured in Project Options.
+Language parser exists but it isn't perfect yet.
+
+In order to generate the parser by hand, antlr v2.7.2 is required.
+There are parser compilation errors with some gcc versions. To avoid
+them, replace file antlr/CppCodeGenerator.java in the antlr source code tree
+with the one from <a href="ftp://fara.cs.uni-potsdam.de/incoming/CppCodeGenerator.java.gz">ftp://fara.cs.uni-potsdam.de/incoming/CppCodeGenerar.java.gz</a>.
 
 \authors <a href="mailto:cloudtemple AT mksat.net">Alexander Dymo</a>
 
 \maintainer <a href="mailto:cloudtemple AT mksat.net">Alexander Dymo</a>
-\maintainer <a href="mailto:2nd maintainer AT provider.com">2nd maintainer full name</a>
-...
-\maintainer <a href="mailto:nth maintainer AT provider.com">nth maintainer full name</a>
 
 \feature Pascal language support
 \feature Consult \ref LangSupportStatus for a up to date features/status of this programming language support part.
 
-\bug Describe a the 1st bug that you know of, but probably hasn't been reported yet.
-..
-\bug Describe a the nth bug that you know of, but probably hasn't been reported yet.
+\bug Language parser can sometimes treat correct lines as errors. Please send sample code to maintainer if you have this problem.
 
-\requirement Describe a the 1st requirement of your part.
-\requirement Describe a the 2nd requirement of your part.
-...
-\requirement Describe a the nth requirement of your part.
+\faq <b>Why KDevelop does not provide GNU pascal compiler plugin?</b> If you need GNU pascal compiler plugin, please write about it to maintainer and prepare to help testing it.
+\faq <b>Compiler plugin lacks option X.</b> Write about it to maintaner or send a patch. Adding compiler options is easy task. Just look at languages/pascal/compiler directory.
 
-\todo Describe a the 1st TODO of your part.
-\todo Describe a the 2nd TODO of your part.
-...
-\todo Describe a the nth TODO of your part.
-
-\faq <b>First frequenly asked question about your part ?</b> Answer.
-\faq <b>Second frequenly asked question about your part ?</b> Answer.
-...
-\faq <b>Last frequenly asked question about your part ?</b> Answer.
-
-\note First note text.
-\note Second note text.
-...
-\note Last note text.
-
-\warning First warning text.
-\warning Second warning text.
-...
-\warning Last warning text.
 
 */
