- changed memory class store

--- a/doc/api/LangSupportStatus.dox
+++ b/doc/api/LangSupportStatus.dox
@@ -93,7 +93,7 @@
       <td bgcolor="green">CodeModel</td>
       <td bgcolor="yellow">CodeModel</td>
       <td bgcolor="cyan">CodeModel</td>
-      <td bgcolor="yellow">Sourceinfo</td>
+      <td bgcolor="yellow">CodeModel</td>
       <td bgcolor="green">CodeModel</td>
       <td bgcolor="green">CodeModel</td>
       <td bgcolor="red">N</td>
