Now we have an ad-hoc icon for this part

--- a/vcs/cvsservice/README.dox
+++ b/vcs/cvsservice/README.dox
@@ -49,6 +49,8 @@ Implementation of this component is done by:
     - Fix minor bugs in parsing 'cvs status' output (see CVSEntry and CVSFileInfoProvider classes)
     - Fix the "cvs update" function which behave strangely for sub-directories of the main
       project dir.
+    - (> 3.0) Replace the menu entries text with shorter ones
+
 
 \authors <a href="mailto:mario.scalas AT libero.it">Mario Scalas</a>
 
