--- a/languages/perl/README.dox
+++ b/languages/perl/README.dox
@@ -7,11 +7,7 @@ over several lines. You can even use some html commands in these lines like:
 and images.
 
 \authors <a href="mailto:bernd AT kdevelop.org">Bernd Gehrmann</a>
-\authors <a href="mailto:2nd author AT provider.com">2nd author full name</a>
-...
-\authors <a href="mailto:nth author AT provider.com">nth author full name</a>
-
-\unmaintained This part is currently un-maintained, and it's compilation disabled in languages/Makefile.am file
+\authors <a href="mailto:willems.luc AT pandora.be">Luc Willems</a>
 
 \feature perl language support
 \feature Consult \ref LangSupportStatus for a up to date features/status of this programming language support part.
