--- a/doc/api/Mainpage.dox
+++ b/doc/api/Mainpage.dox
@@ -42,9 +42,14 @@ Additionally you may also want to find out \ref howToDocument (doc/api/HowToDocu
 
 \section PlannedTasks Planned tasks
 
-First we need to do the \ref HighPriTasks (doc/api/HighPriTasks.dox file) then fix the <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=bugs.bug_id">reported bugs in bugzilla database</a>, then fix the bugs in the \ref bug and finally fix the dispersed \ref todo
-all over the code.\n
-We also have a list of \ref unmaintained parts in KDevelop. You migth want to "adopt" one. :)\n
+Here is a priority ordered list:
+  -# \ref HighPriTasks (doc/api/HighPriTasks.dox file)
+  -# fix the dispersed \ref fixme
+  -# <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=bugs.bug_id">reported bugs in bugzilla database</a>
+  -# fix the bugs in the \ref bug
+  -# fix the dispersed \ref todo all over the code.
+  .
+There are some \ref unmaintained parts in KDevelop. You migth want to "adopt" one. :)\n
 There is also \ref FutureTasks (doc/api/FutureTasks.dox file). Put all ideas for the future KDevelop releases there. It is also a good place to comment on those ideas.
 
 \section misc Misc
